new change update

--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,10 @@
 								</div>
 							</li>
 							<li class="dropdown">
-								<a href="#">Product Details <i class="fas fa-chevron-down"></i></a>
+								<a href="#">Utilities <i class="fas fa-chevron-down"></i></a>
 								<div class="dropdown-content">
 									<div class="dropdown-column">
+										<a href="Tiles-calculate">Tiles Calculate</a>
 										<a href="PackingDetails">Packing Details</a>
 										<a href="technical-specification">Technical Specification</a>
 									</div>
