google translate add

--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,11 @@
 							<li><a href="export">Export</a></li>
 							<li><a href="catalogue">Catalogue</a></li>
 							<li><a href="contact">Contact</a></li>
+							<div id="google_translate_element" class="language"></div>
 						</ul>
 					</div>
+					
+
 					<div class="mobile-menu-btn">
 						<i class="fas fa-bars"></i>
 					</div>
@@ -119,6 +122,9 @@
 			
 			</header>
 	
+
+
+			
 
 		<!--Banner Section ======================-->
 		<section class="section-banner position-relative pt-60">
@@ -489,6 +495,8 @@
 	<script src="assets/js/script.js"></script>
 
 	<script src="customize/presets.js"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	
 
 
 </body>
