--- a/Endless-Collection.html
+++ b/Endless-Collection.html
@@ -103,6 +103,7 @@
 							<li><a href="export">Export</a></li>
 							<li><a href="catalogue">Catalogue</a></li>
 							<li><a href="contact">Contact</a></li>
+							<div id="google_translate_element" class="language"></div>
 						</ul>
 					</div>
 					<div class="mobile-menu-btn">
@@ -1016,6 +1017,7 @@
     <script src="assets/js/script.js"></script>
 
     <script src="customize/presets.js"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 
