--- a/catalogue.html
+++ b/catalogue.html
@@ -72,7 +72,7 @@
 			
 				<nav class="navbar">
 					<div class="logo">
-						<img src="assets/images/fav-icon/AS2.png" alt="Asiacera Logo">
+						<a href="https://asiacerainternational.com/"><img src="assets/images/fav-icon/AS2.png" alt="Asiacera Logo"></a>
 					</div>
 					<div class="nav-links">
 						<ul>
